// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationAvatar component renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 6,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 6,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testI="notification_avatar.single"
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NotificationAvatar component renders multiple avatars 1`] = `
<View
  style={
    Object {
      "marginTop": 8,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F8F5FF",
        "borderRadius": 6,
        "height": 48,
        "justifyContent": "center",
        "padding": 1,
        "width": 48,
      }
    }
    testID="avatar_group"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
      testID="avatar_group.group_2"
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 26,
            "overflow": "hidden",
            "width": 26,
          }
        }
        testID="avatar_group.item_0"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 22,
                  "width": 22,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              testI="notification_avatar.group"
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 26,
            "marginLeft": -6,
            "overflow": "hidden",
            "width": 26,
          }
        }
        testID="avatar_group.item_1"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 22,
                  "width": 22,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              testI="notification_avatar.group"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
